objects/WorkRequestFormProductMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>FieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistValueApi__c</fullName>
        <label>PicklistValueApi</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PicklistValueLabel__c</fullName>
        <label>PicklistValueLabel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>WorkRequestFormProductMapping</label>
    <pluralLabel>WorkRequestFormProductMappings</pluralLabel>
</CustomObject>